@@ -1,129 +1,83 @@
 package com.web.backend.service.report;
 
-import com.web.backend.constant.PaymentStatus;
 import com.web.backend.dto.response.report.CinemaReportResponse;
 import com.web.backend.dto.response.report.MovieReportResponse;
-import com.web.backend.dto.response.report.RevenueReportResponse;
-import com.web.backend.entity.Cinema;
-import com.web.backend.entity.Invoice;
-import com.web.backend.entity.Movie;
-import com.web.backend.entity.Ticket;
-import com.web.backend.exception.AppException;
-import com.web.backend.exception.ErrorCode;
-import com.web.backend.repository.CinemaRepository;
-import com.web.backend.repository.InvoiceRepository;
-import com.web.backend.repository.MovieRepository;
+import com.web.backend.dto.response.report.TimeReportResponse;
+import com.web.backend.dto.response.report.DailyReportResponse;
+import com.web.backend.repository.TicketRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-
-import java.time.LocalDate;
+import java.math.BigDecimal;
+import java.sql.Timestamp;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
-import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
+import java.util.stream.Collectors;
 
 @Service
 public class ReportServiceImpl implements ReportService {
-    
-    @Autowired
-    private InvoiceRepository invoiceRepository;
-    
-    @Autowired
-    private MovieRepository movieRepository;
-    
-    @Autowired
-    private CinemaRepository cinemaRepository;
-
-    @Override
-    public RevenueReportResponse getTotalReport(LocalDate date, LocalDate startDate, LocalDate endDate) {
-        List<Invoice> paidInvoices = getPaidInvoicesInDateRange(date, startDate, endDate);
-
-        int totalRevenue = 0;
-        int totalTicketsSold = 0;
-
-        for (Invoice invoice : paidInvoices) {
-            totalRevenue += invoice.getTotalAmount();
-            totalTicketsSold += invoice.getTickets().size();
+        @Autowired  TicketRepository ticketRepository;
+        @Override
+        public List<CinemaReportResponse> getRevenueByCinema(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByCinema(from, to).stream()
+                    .map(row -> new CinemaReportResponse(
+                            ((Number) row[0]).intValue(),
+                            (String) row[1],
+                            ((BigDecimal) row[2]).longValue(),
+                            ((Number) row[3]).longValue()
+                    )).collect(Collectors.toList());
         }
 
-        return RevenueReportResponse.builder()
-                .totalRevenue(totalRevenue)
-                .totalTicketsSold(totalTicketsSold)
-                .build();
-    }
-
-    @Override
-    public MovieReportResponse getSpecificMovieReport(Integer movieId, LocalDate date, LocalDate startDate, LocalDate endDate) {
-        Movie movie = movieRepository.findById(movieId)
-                .orElseThrow(() -> new AppException(ErrorCode.MOVIE_NOT_EXISTED));
-
-        List<Invoice> paidInvoices = getPaidInvoicesInDateRange(date, startDate, endDate);
-
-        int totalRevenue = 0;
-        int totalTicketsSold = 0;
-
-        for (Invoice invoice : paidInvoices) {
-            for (Ticket ticket : invoice.getTickets()) {
-                if (ticket.getShowtime().getMovie().getId().equals(movieId)) {
-                    totalRevenue += ticket.getPrice();
-                    totalTicketsSold++;
-                }
-            }
+        @Override
+        public List<MovieReportResponse> getRevenueByMovie(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByMovie(from, to).stream()
+                    .map(row -> new MovieReportResponse(
+                            ((Number) row[0]).intValue(),
+                            (String) row[1],
+                            ((BigDecimal) row[2]).longValue(),
+                            ((Number) row[3]).longValue()
+                    )).collect(Collectors.toList());
         }
 
-        return MovieReportResponse.builder()
-                .movieId(movie.getId())
-                .movieTitle(movie.getTitle())
-                .totalRevenue(totalRevenue)
-                .totalTicketsSold(totalTicketsSold)
-                .build();
-    }
-
-    @Override
-    public CinemaReportResponse getSpecificCinemaReport(Integer cinemaId, LocalDate date, LocalDate startDate, LocalDate endDate) {
-        Cinema cinema = cinemaRepository.findById(cinemaId)
-                .orElseThrow(() -> new AppException(ErrorCode.CINEMA_NOT_EXISTED));
-
-        List<Invoice> paidInvoices = getPaidInvoicesInDateRange(date, startDate, endDate);
-
-        int totalRevenue = 0;
-        int totalTicketsSold = 0;
-
-        for (Invoice invoice : paidInvoices) {
-            for (Ticket ticket : invoice.getTickets()) {
-                if (ticket.getShowtime().getRoom().getCinema().getId().equals(cinemaId)) {
-                    totalRevenue += ticket.getPrice();
-                    totalTicketsSold++;
-                }
-            }
+        @Override
+        public List<DailyReportResponse> getRevenueByDay(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByDay(from, to).stream()
+                    .map(row -> new DailyReportResponse(
+                            ((Timestamp) row[0]).toLocalDateTime().toLocalDate(),
+                            ((BigDecimal) row[1]).longValue(),
+                            ((Number) row[2]).longValue()
+                    )).collect(Collectors.toList());
         }
 
-        return CinemaReportResponse.builder()
-                .cinemaId(cinema.getId())
-                .cinemaName(cinema.getName())
-                .totalRevenue(totalRevenue)
-                .totalTicketsSold(totalTicketsSold)
-                .build();
-    }
-
-    private List<Invoice> getPaidInvoicesInDateRange(LocalDate date, LocalDate startDate, LocalDate endDate) {
-        LocalDateTime startDateTime;
-        LocalDateTime endDateTime;
-
-        if (date != null) {
-            startDateTime = date.atStartOfDay();
-            endDateTime = date.atTime(LocalTime.MAX);
-        } else if (startDate != null && endDate != null) {
-            startDateTime = startDate.atStartOfDay();
-            endDateTime = endDate.atTime(LocalTime.MAX);
-        } else {
-            return invoiceRepository.findAll().stream()
-                    .filter(invoice -> invoice.getPaymentStatus() == PaymentStatus.PAID)
-                    .toList();
+        @Override
+        public List<TimeReportResponse> getRevenueByMonth(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByMonth(from, to).stream()
+                    .map(row -> new TimeReportResponse(
+                            ((Number) row[0]).intValue(),
+                            ((Number) row[1]).intValue(),
+                            ((BigDecimal) row[2]).longValue(),
+                            ((Number) row[3]).longValue()
+                    )).collect(Collectors.toList());
         }
 
-        return invoiceRepository.findByPaymentStatusAndPaidAtBetween(PaymentStatus.PAID, startDateTime, endDateTime);
-    }
+        @Override
+        public List<TimeReportResponse> getRevenueByQuarter(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByQuarter(from, to).stream()
+                    .map(row -> new TimeReportResponse(
+                            ((Number) row[0]).intValue(),
+                            ((Number) row[1]).intValue(),
+                            ((BigDecimal) row[2]).longValue(),
+                            ((Number) row[3]).longValue()
+                    )).collect(Collectors.toList());
+        }
+
+        @Override
+        public List<TimeReportResponse> getRevenueByYear(LocalDateTime from, LocalDateTime to) {
+            return ticketRepository.getRevenueByYear(from, to).stream()
+                    .map(row -> new TimeReportResponse(
+                            ((Number) row[0]).intValue(),
+                            null, // no month/quarter
+                            ((BigDecimal) row[1]).longValue(),
+                            ((Number) row[2]).longValue()
+                    )).collect(Collectors.toList());
+        }
 }
